--- a/app_server/views/generic-text.jade
+++ b/app_server/views/generic-text.jade
@@ -6,6 +6,6 @@ block content
  .row
  .col-12.col-lg-8
  p
- | Loc8r was created to help people find places to sit down and get a bit of work done.
+ | This website is created to help students to find new courses about technologies and up skill their career.
  | <br /><br />
- | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nuncsed lorem ac nisi dignissim accumsan.
+ | get started with your learning journey.
