--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -2,7 +2,7 @@ extends layout
 block content
   .row.banner
     .col-12
-      h1 Starcups
+      h1 Course Management System
 
   .row
     .col-12.col-lg-9
@@ -14,35 +14,29 @@ block content
             i.fas.fa-star
             i.far.fa-star
             i.far.fa-star
-          p 125 High Street, Reading, RG6 1PS
+          p Find Exciting Courses To Enhance Your Ability!
 
           .card.card-primary
             .card-block
-              h2.card-title Opening hours
+              h2.card-title Course hours
               p.card-text Monday - Friday : 7:00am - 7:00pm
               p.card-text Saturday : 8:00am - 5:00pm
-              p.card-text Sunday : closed
+              p.card-text Sunday : Quiz
 
           .card.card-primary
             .card-block
               h2.card-title Facilities
               span.badge.badge-warning
                 i.fa.fa-check
-                | &nbsp;Hot drinks
+                | &nbsp;Personal Tutor
               | &nbsp;
               span.badge.badge-warning
                 i.fa.fa-check
-                | &nbsp;Food
+                | &nbsp;Assignments
               | &nbsp;
               span.badge.badge-warning
                 i.fa.fa-check
-                | &nbsp;Premium wifi
-
-        .col-12.col-md-6.location-map
-          .card.card-primary
-            .card-block
-              h2.card-title Location map
-              img.img-fluid.rounded(src='http://maps.googleapis.com/maps/api/staticmap?center=51.455041,-0.9690884&zoom=17&size=400x350&sensor=false&markers=51.455041,-0.9690884&scale=2&key=<API Key>')
+                | &nbsp;Hands-on session
 
     .row
       .col-12
@@ -61,7 +55,7 @@ block content
                 span.review Author Simon Holmes
                 small.review Timestamp 16 February 2017
               .col-12
-                p What a great place.
+                p What a great course.
 
             .row.review
               .col-12.no-gutters.review-header
@@ -74,10 +68,10 @@ block content
                 span.reviewAuthor Charlie Chaplin
                 small.reviewTimestamp 14 February 2017
               .col-12
-                p It was okay. Coffee wasn't great.
+                p It was okay. Course  wasn't great.
 
     .col-12.col-lg-3
       p.lead
-        | Starcups is on Loc8r because it has accessible wifi and space to sit down with your laptop and get some work done.
+        | Looking for course? "CMS" helps you find courses to work when out and about.Let CMS help you find the course you're looking for!
       p
         | If you've been and you like it - or if you don't - please leave a review to help other people just like you.
