--- a/app_server/views/locations-list.jade
+++ b/app_server/views/locations-list.jade
@@ -3,8 +3,8 @@ extends layout
 block content
   .row.banner
     .col-12
-      h1 Loc8r
-      small &nbsp;Find places to work with wifi near you!
+      h1 Course Management  System 
+      small &nbsp;Find Exciting Courses To Enhance Your Ability!
 
   // Listing 4.6 Complete template for app_server/views/locations-list.pug
   // Name of the listing and a link to the location
@@ -20,19 +20,19 @@ block content
       .card
         .card-block
           h4
-            a(href="/location") Starcups
+            a(href="/location") Java From Scratch
             small &nbsp;
             i.fas.fa-star
             i.fas.fa-star
             i.fas.fa-star
             i.far.fa-star
             i.far.fa-star
-            span.badge.badge-pill.badge-default.float-right 100m
-          p.address 125 High Street, Reading, RG6 1PS
+            span.badge.badge-pill.badge-default.float-right 100min
+          p.tutor  Abdul Khaleel
           p.facilities
-            span.badge.badge-warning Hot drinks
-            span.badge.badge-warning Food
-            span.badge.badge-warning Premium wifi
+            span.badge.badge-warning Personal Tutor
+            span.badge.badge-warning Assignments
+            span.badge.badge-warning Hands-on session
 
     .col-12.col-md-4
-      p.lead Looking for wifi and a seat? Loc8r helps you find places to work when out and about. Perhaps with coffee, cake, or a pint? Let Loc8r help you find the place you're looking for
+      p.lead Looking for course? "CMS" helps you find courses to work when out and about.Let CMS help you find the course you're looking for!
